# fusebox

./: .gitignore  Cargo.toml  README.md  anda.hcl  co.tauos.Fusebox.json  fusebox.spec  meson.build  meson_options.txt
.github/: package.yml
.github/workflows/: codeql.yml  package.yml
data/: meson.build  settings.appdata.xml.in  settings.desktop.in  settings.gresources.xml  settings.gschema.xml  style-dark.css  style.css
doc/: meson.build  style.css
fuses/: meson.build
fuses/about/: AboutFuse.vala  OSView.vala  meson.build
fuses/about/data/: gresource.xml.in  meson.build
fuses/about/data/ui/: OSView.blp  meson.build
fuses/accounts/: AccountRow.vala  AccountsFuse.vala  AccountsView.vala  ChangePassword.vala  CreateAccount.vala  EditAccount.vala  Utils.vala  meson.build
fuses/appearance/: AppearanceFuse.vala  AppearanceUtils.vala  AppearanceView.vala  ColorGenerator.vala  ContrastView.vala  DockView.vala  TextView.vala  WallpaperGrid.vala  WindowView.vala  meson.build
fuses/appearance/Utils/: ColorGenerator.vala  EnsorModeButton.vala
fuses/appearance/Views/: AppearanceView.vala  ContrastView.vala  DockView.vala  TextView.vala  WindowView.vala
fuses/appearance/Widgets/: AccentColorButton.vala  EnsorFlowBox.vala  EnsorModeButton.vala  WallpaperGrid.vala
fuses/apps/: Cargo.toml  meson.build
fuses/apps/src/: imp.rs  lib.rs  util.rs
fuses/bluetooth/: meson.build
fuses/bluetooth/src/: BluetoothFuse.vala  DeviceRow.vala  MainView.vala  PairDialog.vala
fuses/bluetooth/src/Services/: Adapter.vala  Agent.vala  Device.vala  Manager.vala
fuses/datetime/: CurrentTimeManager.vala  DatePicker.vala  DateTimeFuse.vala  DateTimeView.vala  TimePicker.vala  WorldLocationFinder.vala  meson.build
fuses/display/: meson.build
fuses/display/src/: DisplayFuse.vala  SettingsDaemon.vala  Utils.vala
fuses/display/src/Interfaces/: MutterDisplayConfig.vala  NightLightManager.vala
fuses/display/src/Objects/: Monitor.vala  MonitorManager.vala  MonitorMode.vala  VirtualMonitor.vala
fuses/display/src/Views/: DisplaysView.vala  NightLightView.vala
fuses/display/src/Widgets/: DisplayWidget.vala  DisplaysOverlay.vala
fuses/locale/: FormatPicker.vala  LanguagePicker.vala  LanguageRow.vala  LocaleFuse.vala  LocaleView.vala  Preview.vala  Utils.vala  meson.build
fuses/mouse/: KeyboardView.vala  LayoutPage.vala  LayoutPageDisplay.vala  MouseFuse.vala  MouseView.vala  TouchpadView.vala  meson.build
fuses/network/: NetworkFuse.vala  ProxySection.vala  VPNSection.vala  WifiSection.vala  WiredSection.vala  meson.build
fuses/sound/: meson.build
fuses/sound/src/: Device.vala  DeviceRow.vala  InputDeviceMonitor.vala  InputPanel.vala  OutputPanel.vala  PulseAudioManager.vala  SoundFuse.vala
fuses/startup/: StartupAppDialog.vala  StartupFuse.vala  StartupView.vala  Utils.vala  meson.build
fuses/startup/Backend/: DesktopFileEnumerator.vala  KeyFile.vala  KeyFileFactory.vala  Monitor.vala
fuses/startup/Entities/: AppInfo.vala
lib/: Fuse.vala  FusesManager.vala  config.vapi  fusebox-1.deps  meson.build
sample/: SampleFuse.vala  meson.build
src/: Application.vala  CategoryView.vala  FusesSearch.vala  SearchView.vala  meson.build
src/Widgets/: CategoryFlowBox.vala  CategoryIcon.vala
vapi/: gl.vapi  libgtop-2.0.vapi
