option('example', type: 'boolean', value: false, description: 'Build an example that shows how it works')
option('introspection', type: 'boolean', value: true, description: 'Generate GObject Introspection data, for use in GObject bindings')
option('documentation', type: 'boolean', value: false, description: 'Generate documentation')