[package]
name = "fuse-apps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fusebox = { version = "1.0.0", features = ["gtk_v4_6"], git = "https://github.com/tau-OS/rust/" }
gettext-rs = "0.7.0"
gio = { git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.17.0" }
glib = { git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.17.0" }
gtk4 = { git = "https://github.com/gtk-rs/gtk4-rs", version = "0.6", features = ["v4_6"] }
libc = "0.2.139"
libflatpak = { git = "https://gitlab.gnome.org/World/Rust/libflatpak-rs.git", version = "0.3.0" }
libhelium = { git = "https://github.com/tau-OS/rust/", version = "1.0.0" }
zbus = "3.7.0"

[lib]
name = "fuseapps"
# remove the lib prefix from the library name

crate-type = ["rlib", "cdylib"]
